# nvim-mcp-server

./: .exrc  .gitattributes  .gitignore  .luarc.json  LICENSE  Makefile  README.md  mcp_tools_list.md  package.json  pyproject.toml
plugin/: nvim-mcp-server.lua
src/: index.ts
src/nvim_mcp/: __init__.py  server.py
src/nvim_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/utils/: nvim.ts
