[project]
name = "nvim-mcp"
version = "0.1.0"
description = "An MCP server for Neovim with LSP-based symbol tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pynvim>=0.5.0",
]

[project.scripts]
nvim-mcp = "nvim_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.0",
    "mypy>=1.0.0",
]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
